--- a/SistemaFacturacion/SistemaFacturacion/Properties/Resources.resx
+++ b/SistemaFacturacion/SistemaFacturacion/Properties/Resources.resx
@@ -151,6 +151,9 @@
   <data name="archivo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Img\archivo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="recepcion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Img\recepcion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="impresora (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Img\impresora (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,7 +166,7 @@
   <data name="tranvia" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Img\tranvia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="recepcion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Img\recepcion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cartabon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Img\cartabon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
