--- a/SistemaFacturacion/SistemaFacturacion/FrmReporteFac.aa-DJ.resx
+++ b/SistemaFacturacion/SistemaFacturacion/FrmReporteFac.aa-DJ.resx
@@ -117,79 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="&gt;&gt;paConsultaReporteFacturaTableAdapter.Type" xml:space="preserve">
-    <value>SistemaFacturacion.Sistema_FacturacionDataSetTableAdapters.paConsultaReporteFacturaTableAdapter, Sistema_FacturacionDataSet.Designer.cs.dll, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="rvFactura.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="rvFactura.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>564, 360</value>
-  </data>
-  <data name="&gt;&gt;rvFactura.Type" xml:space="preserve">
-    <value>Microsoft.Reporting.WinForms.ReportViewer, Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91</value>
-  </data>
-  <data name="&gt;&gt;paConsultaReporteFacturaBindingSource.Name" xml:space="preserve">
-    <value>paConsultaReporteFacturaBindingSource</value>
-  </data>
-  <data name="&gt;&gt;paConsultaReporteFacturaBindingSource.Type" xml:space="preserve">
-    <value>System.Windows.Forms.BindingSource, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;rvFactura.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;rvFactura.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;rvFactura.Name" xml:space="preserve">
-    <value>rvFactura</value>
-  </data>
-  <data name="&gt;&gt;Sistema_FacturacionDataSet.Name" xml:space="preserve">
-    <value>Sistema_FacturacionDataSet</value>
-  </data>
-  <data name="&gt;&gt;Sistema_FacturacionDataSet.Type" xml:space="preserve">
-    <value>SistemaFacturacion.Sistema_FacturacionDataSet, Sistema_FacturacionDataSet.Designer.cs.dll, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
-  <data name="&gt;&gt;paConsultaReporteFacturaTableAdapter.Name" xml:space="preserve">
-    <value>paConsultaReporteFacturaTableAdapter</value>
-  </data>
-  <data name="rvFactura.Size" type="System.Drawing.Size, System.Drawing">
-    <value>564, 360</value>
-  </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>FrmReporteFac</value>
+    <value>Factura de venta</value>
   </data>
-  <data name="rvFactura.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>FrmReporteFac</value>
-  </data>
-  <metadata name="Sistema_FacturacionDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="paConsultaReporteFacturaTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>496, 17</value>
-  </metadata>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="paConsultaReporteFacturaBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>221, 17</value>
-  </metadata>
-  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>aa-DJ</value>
-  </metadata>
 </root>
